# py_airflow_dbt

./: .gitignore  mise.toml  pyproject.toml  requirements.txt
dags/: etl_pipeline.py
dbt/ny_crashes/: dbt_project.yml
dbt/ny_crashes/.dbt/: profiles.yml
dbt/ny_crashes/models/: schema.yml
dbt/ny_crashes/models/marts/: crashes_by_borough.sql  crashes_by_dow.sql
dbt/ny_crashes/models/staging/: stg_crash.sql
py_etl/: db.py  extract.py  load.py  transform.py
py_etl/migrations/: env.py
py_etl/migrations/versions/: 56bf11d3cee8_add_etl_status_table_to_log_pipeline_s_.py  5df5f90c46b2_add_last_crash_date_field_to_etl_status_.py  62747d3e78b0_create_vehicle_and_person_tables.py  7cca8d71af16_add_borough_and_zip_code_columns_to_.py  9ca5c918caff_create_crash_table.py  ffc28bf6afaf_fix_person_injury_field_name_in_person_.py
tests/: test_dag.py  test_py_pipeline.py
